--- a/GITHUB_WORKFLOW_injector_total.yml
+++ b/GITHUB_WORKFLOW_injector_total.yml
@@ -1,4 +1,4 @@
-name: injector_total_ci
+name: injector_total_ci_v33
 on: [push, pull_request, workflow_dispatch]
 jobs:
   injector-total:
@@ -6,19 +6,13 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
-        with:
-          python-version: '3.11'
-      - name: Install deps (jsonschema optional)
+        with: { python-version: '3.11' }
+      - name: Run tests
+        env: { ZORAN_SIGN_KEY: zoran_demo_key }
         run: |
-          python -m pip install --upgrade pip
-          pip install jsonschema || true
-      - name: Run injector_total tests
-        env:
-          ZORAN_SIGN_KEY: zoran_demo_key
-        run: |
-          if [ -f injector_total.py ]; then python injector_total.py; fi
-          if [ -f injector_total_test.py ]; then python injector_total_test.py; fi
-      - name: Collect artifacts
+          python injector_total.py || true
+          python injector_total_test.py
+      - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
           name: injector-total-artifacts
