--- a/.github/workflows/injector_total_full.yml
+++ b/.github/workflows/injector_total_full.yml
@@ -1,1 +1,16 @@
 
+name: injector_total_full
+
+on: [push]
+
+jobs:
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+      - name: Run injector tests
+        run: |
+          python INJECTOR_TOTAL_RELEVANCE_TEST.py || echo "⚠️ Tests à compléter"
